fixed spacing and centering

--- a/style.css
+++ b/style.css
@@ -95,21 +95,22 @@ nav ul {
 /* Footer */
 .social-icons
 {
-    justify-content: center, space-between;
-    border-radius: 38%;
+    justify-content: center;
+    gap: 10px;
+
 }
 
 .resize-icon
 {
     width: 50px;
     height: 40px;
-    justify-content: center;
 }
 
 footer 
 {
     margin: 0 auto;
     width: 500px;
+    text-align: center;
 }
 
 /* Hours */
